--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,12 @@
   /* azul petróleo */
   --color-destaque: #81c784;
   /* verde suave */
-  --color-destaque-trasparente: #81c784cd;
+  --color-destaque-trasparente: #81c784ea;
   /* verde suave com transparencia*/
 
   --color-neutra-100: #ffffff;
   --color-neutra-200: #f5f5f5;
+  --color-neutra-300: #e2e2e2;
   --color-neutra-400: #9e9e9e;
   --color-neutra-700: #424242;
   --color-neutra-900: #212121;
@@ -86,7 +87,8 @@ header {
 }
 
 .logo {
-  height: 50px;
+  height: 60px;
+  width: 100px;
   display: block;
   /* Remove espaço extra abaixo da imagem */
   transition: transform 0.3s ease;
@@ -133,8 +135,12 @@ header {
 
 /* Menu Mobile */
 @media (max-width: 768px) {
+  body {
+    height: 25vh; /* não aparece o header */
+  }
+
   html {
-    scroll-padding-top: 80px;
+    scroll-padding-top: 10px;
   }
 
   .logo {
@@ -190,7 +196,7 @@ section p {
   margin-bottom: var(--space-3);
 }
 
-/* ============= Cards, botões e formulários =================== */
+/* ============= Cards, botões, formulários e etc =================== */
 img {
   max-width: 80%;
   height: auto;
@@ -198,7 +204,7 @@ img {
 }
 
 article {
-  background-color: var(--color-neutra-200);
+  background-color: var(--color-neutra-300);
   border-radius: 8px;
   padding: var(--space-3);
   margin-top: var(--space-3);
@@ -211,6 +217,11 @@ article img {
   height: auto;
   margin-top: var(--space-2);
   border-radius: 8px;
+  /* Transição para suavizar as mudanças */
+  transition: transform 0.6s ease-in-out, filter 0.5s ease-in-out;
+}
+article img:hover {
+  transform: scale(1.05); /* Aumenta ligeiramente a imagem */
 }
 
 button,
@@ -264,6 +275,15 @@ select:focus {
   outline: 2px solid var(--color-primaria);
 }
 
+ul {
+  padding: var(--space-4);
+}
+
+.nav-list {
+  padding: 0;
+}
+
+
 /* ==================== home ==================== */
 #section-home {
   background-image: url(../img/imagemPrincipal.png);
@@ -284,7 +304,7 @@ select:focus {
 #section-projetos {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: var(--space-4);
+  gap: 9vw;
 }
 
 #section-projetos article {
