fix(layout): ajusta posição do h1 e cores

--- a/css/style.css
+++ b/css/style.css
@@ -360,6 +360,7 @@ ul {
 /* ==================== Projetos e grids ==================== */
 .titulo-pagina {
   text-align: center;
+  color: var(--color-neutra-900);
 }
 
 #section-projetos {
